--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "shopping website",
   "main": "./Client/src/App.jsx",
   "scripts": {
-    "test": "npx jest"
+    "server-dev": "npx nodemon --watch server server/index.js",
+    "client-dev": "npx webpack --watch",
+    "build": "npx webpack"
   },
   "repository": {
     "type": "git",
@@ -17,12 +19,20 @@
   },
   "homepage": "https://github.com/rpp2204-fec-cheesefoam/chinese_forum#readme",
   "dependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "axios": "^0.27.2",
+    "babel-loader": "^8.2.2",
+    "dotenv": "^10.0.0",
+    "express": "^4.18.1",
     "jest": "^28.1.3",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
