--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "server-dev": "npx nodemon --watch server server/index.js",
     "client-dev": "npx webpack --watch",
-    "build": "npx webpack"
+    "build": "npx webpack",
+    "test-reviews": "jest ./review.spec.js"
   },
   "repository": {
     "type": "git",
