--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "server-dev": "npx nodemon --watch server server/index.js",
     "client-dev": "npx webpack --watch",
     "build": "npx webpack",
-    "test-reviews": "jest ./review.spec.js",
-    "test-questions": "jest ./question.spec.js"
+    "test-reviews": "jest ./review.spec.js"
   },
   "repository": {
     "type": "git",
