--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jest": "^28.1.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
