--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "jest": "^28.1.3",
+    "lazy": "^1.0.11",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
