--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.15.1",
     "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
