added stuff to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-node_modules
-
-client/dist/
-
-.DS_Store
-
-.env
-
+.gitignore
+Client/src/.DS_Store
+Client/src/components/App.jsx
+Client/src/components/Card.jsx
+Client/src/components/QnA.jsx
+Client/src/components/RelatedProducts.jsx
+Client/src/components/Reviews.jsx
+Client/src/components/StarRating.jsx
+Client/src/components/reviews/Reviews_list.jsx
+package-lock.json
+package.json
+server/index.js
+server/reviews.js
