--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chinese_forum",
   "version": "1.0.0",
   "description": "shopping website",
-  "main": "./Client/src/App.jsx",
+  "main": "./Client/src/index.jsx",
   "scripts": {
     "server-dev": "npx nodemon --watch server server/index.js",
     "client-dev": "npx webpack --watch",
