--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.2",
+    "body-parser": "^1.20.0",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "jest": "^28.1.3",
