--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
+    "react-select": "^5.4.0",
     "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
