--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "^8.2.2",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
+    "express-static-gzip": "^2.1.7",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.0.1",
     "mongoose": "^6.5.2",
