--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
     "react-select": "^5.4.0",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "user-event": "^4.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
